# opencv_scan_face_dataset

./: .gitignore  .venv_python_shim.sh  CMakeLists.txt  README.md  activate_env.sh  python3_fdet  setup.sh  test_detector.sh
src/: dataset_builder.cpp  dataset_builder.h  dataset_manager.cpp  dataset_manager.h  face_detector.cpp  face_detector.h  face_recognizer.cpp  face_recognizer.h  live_window.cpp  live_window.h  main.cpp  person_registry.cpp  person_registry.h
